<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/detail_movie_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginLeft="8dp"
    card_view:cardCornerRadius="4dp"
    tools:context=".DetailMovieActivity">

    <ImageView
        android:id="@+id/img_detail_photo"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/movie_image"
        tools:src="@color/colorAccent"/>

    <TextView
        android:id="@+id/tv_detail_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/img_detail_photo"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:text="Title"/>

    <TextView
        android:id="@+id/tv_item_price"
        android:layout_below="@+id/tv_detail_title"
        android:layout_toEndOf="@+id/img_detail_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        tools:text="year"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_vertical_margin"/>

    <TextView
        android:id="@+id/tv_text_description"
        android:layout_below="@+id/img_detail_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

    <TextView
        android:id="@+id/tv_detail_description"
        android:layout_below="@+id/tv_text_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="description"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

    <TextView
        android:id="@+id/tv_text_detail"
        android:layout_below="@+id/tv_detail_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

    <TableLayout
        android:id="@+id/table"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="8dp"
        android:layout_below="@id/tv_text_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:text="@string/title"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_weight="1"
                android:text="@string/lorem"
                android:textColor="@android:color/black"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:text="@string/year"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_weight="1"
                android:text="@string/lorem"
                android:textColor="@android:color/black"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:text="@string/source"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_weight="1"
                android:text="@string/source_link"
                android:textColor="@android:color/black"/>
        </TableRow>
    </TableLayout>

</RelativeLayout>